--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/my/my",
-    "pages/category/category"
+    "pages/category/category",
+    "pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance"
   ],
   "window": {
     "backgroundTextStyle": "light",
