--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/my/my",
     "pages/category/category",
-    "pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance"
+    "pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance",
+    "pages/records/records"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -32,5 +33,8 @@
     "position": "bottom"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "useExtendedLib": {
+    "weui": true
+  }
 }
